--- a/index.html
+++ b/index.html
@@ -7,19 +7,25 @@
 
   <link rel="stylesheet" href="styles.css">
   <link rel="icon" href="images/favicon.png">
-  <script href="script.js"></script>
 </head>
 
 <body>
   <div class="container">
+    <div class="header">
+      welcome :3
+    </div>
     <div class="main">
-      <div class="mainbox">
-          <img src="images/boykisser.gif" width="140px" style="float:left; margin-right: 10px">
-          hey there! so cool that you stumbled across my <u>personal website!</u> i am shayuki, but you might know me irl as <b>shaoyu wang.</b>
-          <br>. . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . .</br>
-          this goofy lil place is gonna be my website from now on i guess. feel free to take a look around :3
+        <div class="mainbox">
+            <img src="images/boykisser.gif" width="140px" style="float:left; margin-right: 10px">
+            hey there! thanks for stumbling across my <u>personal website!</u> i am shayuki, but you might know me irl as <b>shaoyu wang.</b>
+            <br>. . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . .</br>
+            this goofy lil place is gonna be my website from now on i guess. feel free to take a look around :3
+        </div>
       </div>
-    </div> 
+    
+    
+
   </div>
+  <script src="script.js"></script>
 </body>
 </html>
