--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
             <img src="images/boykisser.gif" width="140px" style="float:left; margin-left: -15px; margin-right: 10px">
             hey there! thanks for stumbling across my <u>personal website!</u> i am shayuki, but you might know me irl as <b>shaoyu wang.</b>
             <br>. . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . .
-            this goofy lil place is gonna be my website from now on i guess. feel free to take a look around :3
+            this goofy lil place is gonna be my website from now on. feel free to take a look around :3
         </div>
       </div>
     
-
+      
   </div>
   <script src="script.js"></script>
 </body>
