--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
             <br>journal
             <br>playlist
             <br>memes
+            <br>faq's
           </div>
         </div>
       </div>
