--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       shayuki :3
     </div>
     <div class="main">
-        <div class="mainbox boxshadow">
+        <div class="mainbox boxshadow" style="margin: 0px;">
             <img src="images/boykisser.gif" height="140px" style="float:left; margin: 5px">
             <div class="textbox">
               hi, and welcome to my little corner on the internet! <br> i am <b>shayuki</b>, but you might know me irl as <b>shaoyu.</b>
@@ -28,19 +28,34 @@
 
     <div class="about-section">
 
-      <div class="mainbox sidebar">
-        <div class="subheaderbox boxshadow">
-          <b>links</b>
-          <img src="images/astolfo1.gif" class="pixelated" height="25px" style="float:right; border-radius:5px">
+      <div class="sidebar">
+        <div class="mainbox">
+          <div class="subheaderbox boxshadow">
+            <b>links</b>
+            <img src="images/astolfo1.gif" class="icon">
+          </div>
+          <div class="textbox">
+            <div class="list">
+              home
+              <br>profile
+              <br>journal
+              <br>playlist
+              <br>memes
+              <br>faq's
+            </div>
+          </div>
         </div>
-        <div class="textbox">
-          <div class="list">
-            home
-            <br>profile
-            <br>journal
-            <br>playlist
-            <br>memes
-            <br>faq's
+
+        <div class="mainbox">
+          <div class="subheaderbox boxshadow">
+            <b>daily</b>
+            <img src="images/sun.gif" class="icon">
+          </div>
+          <div class="textbox">
+            <div id="month" class="calendar-page"></div>
+            <div id="date" class="calendar-page text-outline" style="font-size:50px;"></div>
+            <div id="day" class="calendar-page"></div>
+            <div id="time"></div>
           </div>
         </div>
       </div>
@@ -59,42 +74,43 @@
           </div> 
         </div>
       </div>
+      <div class="sidebar">
+        <div class="mainbox">
+          <div class="subheaderbox boxshadow">
+            <b>socials</b>
+            <img src="images/astolfo1.gif" class="icon">
+          </div>
 
-      <div class="mainbox sidebar">
-        <div class="subheaderbox boxshadow">
-          <b>socials</b>
-          <img src="images/astolfo1.gif" class="pixelated" height="25px" style="float:right; border-radius:5px">
+          <a href="https://discord.com/users/1142267912686665779" target="_blank" class="social-link">
+            <div class="socialsbox">
+              <img src="https://static.vecteezy.com/system/resources/previews/006/892/625/non_2x/discord-logo-icon-editorial-free-vector.jpg" class="socials">
+              <span class="social-text">silly_austinite</span>
+            </div>
+          </a>
+
+          <a href="https://www.instagram.com/shayuki2/" target="_blank" class="social-link">
+            <div class="socialsbox">
+              <img src="https://cdn.pixabay.com/photo/2021/06/15/12/14/instagram-6338393_1280.png" class="socials">
+              <span class="social-text">@shayuki2</span>
+            </div>
+          </a>
+
+          <a href="https://open.spotify.com/user/31mruayvtm3isu7jzbskwbplp2iu" target="_blank" class="social-link">
+            <div class="socialsbox">
+              <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/84/Spotify_icon.svg/1982px-Spotify_icon.svg.png" class="socials">
+              <span class="social-text">Shaoyu</span>
+            </div>
+          </a>
+
+          <a href="https://github.com/shaoyuwang119" target="_blank" class="social-link">
+            <div class="socialsbox">
+              <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/91/Octicons-mark-github.svg/2048px-Octicons-mark-github.svg.png" class="socials">
+              <span class="social-text">shaoyuwang119</span>
+            </div>
+          </a>
+
+
         </div>
-
-        <a href="https://discord.com/users/1142267912686665779" target="_blank" class="social-link">
-          <div class="socialsbox">
-            <img src="https://static.vecteezy.com/system/resources/previews/006/892/625/non_2x/discord-logo-icon-editorial-free-vector.jpg" class="socials">
-            <span class="social-text">silly_austinite</span>
-          </div>
-        </a>
-
-        <a href="https://www.instagram.com/shayuki2/" target="_blank" class="social-link">
-          <div class="socialsbox">
-            <img src="https://cdn.pixabay.com/photo/2021/06/15/12/14/instagram-6338393_1280.png" class="socials">
-            <span class="social-text">@shayuki2</span>
-          </div>
-        </a>
-
-        <a href="https://open.spotify.com/user/31mruayvtm3isu7jzbskwbplp2iu" target="_blank" class="social-link">
-          <div class="socialsbox">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/84/Spotify_icon.svg/1982px-Spotify_icon.svg.png" class="socials">
-            <span class="social-text">Shaoyu</span>
-          </div>
-        </a>
-
-        <a href="https://github.com/shaoyuwang119" target="_blank" class="social-link">
-          <div class="socialsbox">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/91/Octicons-mark-github.svg/2048px-Octicons-mark-github.svg.png" class="socials">
-            <span class="social-text">shaoyuwang119</span>
-          </div>
-        </a>
-
-
       </div>
     </div>
   </div>
