--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="header">
       shayuki :3
     </div>
-    <div class="main">
+    <div class="plaid">
         <div class="mainbox boxshadow" style="margin: 0px;">
             <img src="images/boykisser.gif" height="140px" style="float:left; margin: 5px">
             <div class="textbox">
@@ -47,7 +47,7 @@
           </div>
         </div>
 
-        <div class="mainbox border darkborder">
+        <div class="mainbox border">
           <div class="subheaderbox boxshadow">
             <b>daily</b>
             <img src="images/sun.gif" class="icon">
@@ -114,11 +114,10 @@
             </div>
           </a>
 
-
         </div>
-        <img src="images/banner.gif" class="border darkborder" title="credit: kotnaszynce, OpenGameArt.org">
-        
-  </div>
+        <!-- <img src="images/banner.gif" style="border-radius:10px" title="credits: kotnaszynce, OpenGameArt.org"> -->
+        <img src="images/catdance.gif" style="margin-top: 40px;">
+      </div>
   <script src="script.js"></script>
 </body>
 </html>
