--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           </div>
           <div class="textbox">
             yep, my name is Shaoyu Wang. i'm just a 15 y/o aspiring software developer who likes spending his free time (rather unproductively)
-            coding and practicing piano. i go to LASA high school in austin, texas.
+            coding and practicing piano. i'm from the weird city of austin, texas.
             biggest goal right now is to uhh... get through sophomore year, hopefully. well, everyone starts somewhere, right?
             <br><br>anyways, astolfo's my pookie! who would i be without him? :3
           </div> 
